--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,5 +7,7 @@
 <body>
     <h1>Welcome To The Taco Cloud!</h1>
     <img th:src="@{/images/taco.png}"/>
+
+    <a th:href="@{/design}" id="design">Design a taco</a>
 </body>
 </html>
