--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -12,6 +12,10 @@
     <form method="POST" th:object="${design}">
         <h1>Design your taco!</h1>
         <img th:src="@{/images/taco.png}"/>
+
+        <form method="POST" th:action="@{/logout}" id="logoutForm">
+            <input type="submit" value="Logout"/>
+        </form>
         <!--<div th:if="${#fields.hasErrors()}">-->
                 <!--<span class="validationError">-->
                 <!--Please correct the problems below and resubmit.-->
