--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,10 @@
     <h1>Welcome To The Taco Cloud!</h1>
     <img th:src="@{/images/taco.png}"/>
 
+    <form method="POST" th:action="@{/logout}" id="logoutForm">
+        <input type="submit" value="Logout"/>
+    </form>
+
     <a th:href="@{/design}" id="design">Design a taco</a>
 </body>
 </html>
